from TODO.md to index.html

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <link type="text/css" href="css/dataTables.alphabetSearch.css" rel="stylesheet" />
     </head>
     <body>
-        <h1><i class="fa fa-american-sign-language-interpreting"></i> Fish and marine life hand signals</h1>
-
+      <a href="https://github.com/repat/fish-hand-signals"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
+      <h1><i class="fa fa-american-sign-language-interpreting"></i> Fish and marine life hand signals</h1>
         <table id="signals" class="display" cellspacing="0" width="100%">
            <thead>
               <tr>
@@ -38,17 +38,191 @@
            </thead>
             <tbody>
                <tr>
-                   <td>Fish</td>
+                   <td>Angelfish</td>
                    <td><img src=""/></td>
-                   <td>-</td>
-                   <td><a href="https://en.wikipedia.org/wiki/Fish"><i class="fa fa-wikipedia-w"></i></a></td>
+                   <td>Angel shark</td>
+                   <td><a href="https://en.wikipedia.org/wiki/Pomacanthidae"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Angel shark</td>
+                   <td><img src=""/></td>
+                   <td>Angelfish</td>
+                   <td><a href="https://en.wikipedia.org/wiki/Angel_shark"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Barracuda</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Barracuda"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Bluespotted ribbontail/sting ray</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Bluespotted_ribbontail_ray"><i class="fa fa-wikipedia-w"></i></a> / <a href="https://en.wikipedia.org/wiki/Kuhl%27s_maskray"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Boxfish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Ostraciidae"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Crab</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Crab"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Cuttlefish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Cuttlefish"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Dolphin</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Dolphin"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Grouper</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Grouper"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Hammerhead shark</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Hammerhead_shark"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Jellyfish</td>
+                   <td><img src=""/></td>
+                   <td>Octopus</td>
+                   <td><a href="https://en.wikipedia.org/wiki/Jellyfish"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Lionfish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Pterois"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Lobster</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Lobster"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Manta Ray</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Manta_ray"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Moray eel</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Moray_eel"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Nudibranch</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Nudibranch"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Octopus</td>
+                   <td><img src=""/></td>
+                   <td>Jellyfish</td>
+                   <td><a href="https://en.wikipedia.org/wiki/Octopus"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Parrotfish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Parrotfish"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Porcupinefish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Porcupinefish"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Pufferfish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Tetraodontidae"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Ray</td>
+                   <td><img src=""/></td>
+                   <td>Manta Ray, Bluespotted ray</td>
+                   <td><a href="https://en.wikipedia.org/wiki/Tetraodontidae"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Scorpionfish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Scorpaenidae"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Shark</td>
+                   <td><img src=""/></td>
+                   <td>Hammerhead shark, Angel shark, Whale shark</td>
+                   <td><a href="https://en.wikipedia.org/wiki/Shark"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Shrimp</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Shrimp"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Stonefish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Synanceia"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Tuna</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Tuna"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Turtle</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Turtle"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Triggerfish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Triggerfish"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Trumpetfish</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Trumpetfish"><i class="fa fa-wikipedia-w"></i></a></td>
+               </tr>
+               <tr>
+                   <td>Whale shark</td>
+                   <td><img src=""/></td>
+                   <td></td>
+                   <td><a href="https://en.wikipedia.org/wiki/Whale_shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
            </tbody>
         </table>
 
         <footer>
         <hr>
-        <small>&copy; <a href="https://rpschultz.de">Rene</a> w/ <a href="http://leaguesdiving.com/">Leagues Ahead Diving</a>, 2017</small>
+        <small>CC-BY-SA 3.0 <a href="https://rpschultz.de">Rene</a> w/ <a href="http://leaguesdiving.com/">Leagues Ahead Diving</a>, 2017</small>
         </footer>
 
         <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
