--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
     </head>
     <body>
       <a href="https://github.com/repat/fish-hand-signals"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
+      <p>
+        &nbsp;
+      </p>
+      <p>
+        &nbsp;
+      </p>
+      <p>
+        &nbsp;
+      </p>
+      <p>
+        &nbsp;
+      </p>
       <h1><i class="fa fa-american-sign-language-interpreting"></i> Fish and marine life hand signals</h1>
         <table id="signals" class="display" cellspacing="0" width="100%">
            <thead>
