--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
         $('#signals').DataTable({
            dom: 'Alfrtip',
            alphabetSearch: {
-              column: 0
+              column: 0,
+              pageLength: 100
            }
         });
         </script>
