--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         &nbsp;
       </p>
       <h1><i class="fa fa-american-sign-language-interpreting"></i> Fish and marine life hand signals</h1>
+      <p>
+         <i class="fa fa-exclamation-triangle"></i> Under construction
+      </p>
         <table id="signals" class="display" cellspacing="0" width="100%">
            <thead>
               <tr>
