placeholder,css,robots

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Fish and marine life hand signals for diving</title>
 
         <meta content="Rene and Leagues Ahead Diving" name="author" />
-        <meta content="Fish and marine life hand signals for diving" name="description" />
+        <meta content="A summary of fish and marine life hand signals used for scuba and free diving" name="description" />
         <meta content="fish,marine,life,hand,signals,signs,diving,scuba,freediving" name="keywords" />
 
         <meta property="og:image" content="http://fish-hand-signals.de/img/logo.png" />
@@ -17,12 +17,13 @@
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="http://fish-hand-signals.de"/>
         <meta property="og:site_name" content="Fish Hand Signals"/>
-        <meta property="og:description" content="Fish and marine life hand signals for diving"/>
+        <meta property="og:description" content="A summary of fish and marine life hand signals used for scuba and free diving"/>
 
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet' type='text/css' />
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
         <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel='stylesheet' type='text/css' />
         <link type="text/css" href="css/dataTables.alphabetSearch.css" rel="stylesheet" />
+        <link type="text/css" href="css/own.css" rel="stylesheet" />
     </head>
     <body>
       <a href="https://github.com/repat/fish-hand-signals"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
@@ -42,7 +43,7 @@
       <p>
          <i class="fa fa-exclamation-triangle"></i> Under construction
       </p>
-        <table id="signals" class="display" cellspacing="0" width="100%">
+        <table id="signals" class="display zerocellspacingwidth100">
            <thead>
               <tr>
                  <th>Name</th>
@@ -54,181 +55,181 @@
             <tbody>
                <tr>
                    <td>Angelfish</td>
-                   <td><img src=""/></td>
+                   <td><repat.de/></td>
                    <td>Angel shark</td>
                    <td><a href="https://en.wikipedia.org/wiki/Pomacanthidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Angel shark</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td>Angelfish</td>
                    <td><a href="https://en.wikipedia.org/wiki/Angel_shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Barracuda</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Barracuda"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Bluespotted ribbontail/sting ray</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Bluespotted_ribbontail_ray"><i class="fa fa-wikipedia-w"></i></a> / <a href="https://en.wikipedia.org/wiki/Kuhl%27s_maskray"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Boxfish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Ostraciidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Crab</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Crab"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Cuttlefish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Cuttlefish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Dolphin</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Dolphin"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Grouper</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Grouper"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Hammerhead shark</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Hammerhead_shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Jellyfish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td>Octopus</td>
                    <td><a href="https://en.wikipedia.org/wiki/Jellyfish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Lionfish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Pterois"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Lobster</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Lobster"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Manta Ray</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Manta_ray"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Moray eel</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Moray_eel"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Nudibranch</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Nudibranch"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Octopus</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td>Jellyfish</td>
                    <td><a href="https://en.wikipedia.org/wiki/Octopus"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Parrotfish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Parrotfish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Porcupinefish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Porcupinefish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Pufferfish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Tetraodontidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Ray</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td>Manta Ray, Bluespotted ray</td>
                    <td><a href="https://en.wikipedia.org/wiki/Tetraodontidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Scorpionfish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Scorpaenidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Shark</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td>Hammerhead shark, Angel shark, Whale shark</td>
                    <td><a href="https://en.wikipedia.org/wiki/Shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Shrimp</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Shrimp"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Stonefish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Synanceia"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Tuna</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Tuna"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Turtle</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Turtle"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Triggerfish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Triggerfish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Trumpetfish</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Trumpetfish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Whale shark</td>
-                   <td><img src=""/></td>
+                   <td><img src="img/placeholder.png"/></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Whale_shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
