minor fixes, favicon

--- a/index.html
+++ b/index.html
@@ -55,181 +55,181 @@
             <tbody>
                <tr>
                    <td>Angelfish</td>
-                   <td><repat.de/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td>Angel shark</td>
                    <td><a href="https://en.wikipedia.org/wiki/Pomacanthidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Angel shark</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td>Angelfish</td>
                    <td><a href="https://en.wikipedia.org/wiki/Angel_shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Barracuda</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Barracuda"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Bluespotted ribbontail/sting ray</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Bluespotted_ribbontail_ray"><i class="fa fa-wikipedia-w"></i></a> / <a href="https://en.wikipedia.org/wiki/Kuhl%27s_maskray"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Boxfish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Ostraciidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Crab</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Crab"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Cuttlefish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Cuttlefish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Dolphin</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Dolphin"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Grouper</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Grouper"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Hammerhead shark</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Hammerhead_shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Jellyfish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td>Octopus</td>
                    <td><a href="https://en.wikipedia.org/wiki/Jellyfish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Lionfish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Pterois"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Lobster</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Lobster"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Manta Ray</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Manta_ray"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Moray eel</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Moray_eel"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Nudibranch</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Nudibranch"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Octopus</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td>Jellyfish</td>
                    <td><a href="https://en.wikipedia.org/wiki/Octopus"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Parrotfish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Parrotfish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Porcupinefish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Porcupinefish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Pufferfish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Tetraodontidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Ray</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td>Manta Ray, Bluespotted ray</td>
                    <td><a href="https://en.wikipedia.org/wiki/Tetraodontidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Scorpionfish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Scorpaenidae"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Shark</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td>Hammerhead shark, Angel shark, Whale shark</td>
                    <td><a href="https://en.wikipedia.org/wiki/Shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Shrimp</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Shrimp"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Stonefish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Synanceia"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Tuna</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Tuna"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Turtle</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Turtle"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Triggerfish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Triggerfish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Trumpetfish</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Trumpetfish"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
                <tr>
                    <td>Whale shark</td>
-                   <td><img src="img/placeholder.png"/></td>
+                   <td><img src="img/placeholder.png" alt="placeholder" /></td>
                    <td></td>
                    <td><a href="https://en.wikipedia.org/wiki/Whale_shark"><i class="fa fa-wikipedia-w"></i></a></td>
                </tr>
