--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet' type='text/css' />
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
         <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel='stylesheet' type='text/css' />
-        <link type="text/css" href="css/dataTables.alphabetSearch.css" rel="stylesheet" />
-        <link type="text/css" href="css/own.css" rel="stylesheet" />
+        <link href="css/dataTables.alphabetSearch.css" rel="stylesheet" type="text/css" />
+        <link href="css/own.css" rel="stylesheet" type="text/css" />
+        <link href="favicon.ico" rel="shortcut icon" />
     </head>
     <body>
       <a href="https://github.com/repat/fish-hand-signals"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
