--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Fish and marine life hand signals for diving</title>
@@ -10,7 +9,8 @@
         <meta content="Rene and Leagues Ahead Diving" name="author" />
         <meta content="A summary of fish and marine life hand signals used for scuba and free diving" name="description" />
         <meta content="fish,marine,life,hand,signals,signs,diving,scuba,freediving" name="keywords" />
-
+        <meta name="robots" content="index, follow">
+        
         <meta property="og:image" content="http://fish-hand-signals.de/img/logo.png" />
         <meta property="og:locale" content="en_EN" />
         <meta property="og:title" content="Fish Hand Signals"/>
@@ -25,6 +25,27 @@
         <link href="css/dataTables.alphabetSearch.css" rel="stylesheet" type="text/css" />
         <link href="css/own.css" rel="stylesheet" type="text/css" />
         <link href="favicon.ico" rel="shortcut icon" />
+        <!--<link rel="amphtml" href="amp.html" />-->
+
+        <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "NewsArticle",
+          "headline": "Fish and marine life hand signals for diving",
+          "alternativeHeadline": "A summary of fish and marine life hand signals used for scuba and free diving",
+          "dateline": "Las Palmas, ES",
+          "image": "http://fish-hand-signals.de/img/logo.png",
+          "datePublished": "2017-12-02",
+          "description": "A summary of fish and marine life hand signals used for scuba and free diving",
+          "author":"Rene and Leagues Ahead Diving",
+          "publisher": "Rene and Leagues Ahead Diving",
+          "dateModified" :"2017-12-02",
+          "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "http://fish-hand-signals.de"
+          }
+        }
+        </script>
     </head>
     <body>
       <a href="https://github.com/repat/fish-hand-signals"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
@@ -239,7 +260,7 @@
 
         <footer>
         <hr>
-        <small>CC-BY-SA 3.0 <a href="https://rpschultz.de">Rene</a> w/ <a href="http://leaguesdiving.com/">Leagues Ahead Diving</a>, 2017</small>
+        <small>CC-BY-SA 3.0 <a href="https://rpschultz.de">Rene</a> w/ <a href="https://leaguesdiving.com/">Leagues Ahead Diving Gran Canaria</a>, 2017</small>
         </footer>
 
         <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
